# django-api

./: .gitignore  build.sh  pyproject.toml  render.yaml
mysite/: settings.py  urls.py
render/: admin.py  models.py  serializers.py  urls.py  views.py
render/migrations/: 0001_initial.py  0002_rename_render_blog.py
render/templates/render/: index.html
