[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["olakunle-exxdee <saheedogunsolu2016@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.7"
Django = ">=3.2.19"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
